--- a/package.json
+++ b/package.json
@@ -1,73 +1,41 @@
 {
-  "name": "vue-pure-admin",
-  "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env --max_old_space_size=4096 vite",
-    "serve": "cross-env --max_old_space_size=4096 vite",
-    "build": "cross-env vite build",
-    "preview": "vite preview",
-    "preview:build": "npm run build && vite preview"
+    "start": "umi dev",
+    "build": "umi build",
+    "postinstall": "umi generate tmp",
+    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
+    "test": "umi-test",
+    "test:coverage": "umi-test --coverage"
   },
-  "husky": {
-    "hooks": {
-      "commit-msg": "node scripts/verify-commit.js"
-    }
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,less,md,json}": [
+      "prettier --write"
+    ],
+    "*.ts?(x)": [
+      "prettier --parser=typescript --write"
+    ]
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
-    "@logicflow/core": "^0.4.6",
-    "@logicflow/extension": "^0.4.6",
-    "@vueuse/core": "^5.0.3",
-    "await-to-js": "^3.0.0",
-    "axios": "^0.21.1",
-    "cropperjs": "^1.5.11",
-    "dayjs": "^1.10.5",
-    "dotenv": "^8.2.0",
-    "echarts": "^5.1.1",
-    "element-plus": "^1.0.2-beta.48",
-    "font-awesome": "^4.7.0",
+    "@ant-design/pro-layout": "^6.5.0",
+    "@umijs/preset-react": "1.x",
     "lodash-es": "^4.17.21",
-    "mitt": "^2.1.0",
-    "mockjs": "^1.1.0",
-    "nprogress": "^0.2.0",
-    "path": "^0.12.7",
-    "path-to-regexp": "^6.2.0",
-    "pinia": "^2.0.0-beta.2",
-    "resize-observer-polyfill": "^1.5.1",
-    "responsive-storage": "^1.0.4",
-    "v-contextmenu": "^3.0.0",
-    "vue": "^3.1.1",
-    "vue-i18n": "^9.1.6",
-    "vue-json-pretty": "^2.0.2",
-    "vue-router": "^4.0.9",
-    "vue-types": "^3.0.2",
-    "vuedraggable": "^4.0.3",
-    "vxe-table": "^4.0.21",
-    "wangeditor": "^4.0.3",
-    "xe-ajax": "^4.0.5",
-    "xe-utils": "^3.2.1",
-    "xgplayer": "^2.22.1"
+    "umi": "^3.4.25",
+    "wangeditor": "^4.7.4"
   },
   "devDependencies": {
-    "@types/mockjs": "^1.0.3",
-    "@types/node": "^14.14.14",
-    "@types/nprogress": "^0.2.0",
-    "@vitejs/plugin-vue": "^1.2.3",
-    "@vitejs/plugin-vue-jsx": "^1.1.5",
-    "@vue/compiler-sfc": "^3.1.1",
-    "autoprefixer": "^10.2.4",
-    "babel-plugin-transform-remove-console": "^6.9.4",
-    "chalk": "^2.4.2",
-    "cross-env": "^7.0.3",
-    "husky": "^6.0.0",
-    "postcss": "^8.2.6",
-    "postcss-import": "^14.0.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
-    "typescript": "^4.2.4",
-    "vite": "^2.3.8",
-    "vite-plugin-mock": "^2.8.0",
-    "vite-plugin-style-import": "^1.0.0"
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@umijs/test": "^3.4.25",
+    "lint-staged": "^10.0.7",
+    "prettier": "^2.2.0",
+    "react": "17.x",
+    "react-dom": "17.x",
+    "typescript": "^4.1.2",
+    "yorkie": "^2.0.0"
   }
 }
