--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+.idea
 # dependencies
 /node_modules
 /npm-debug.log*
@@ -18,3 +19,5 @@
 /src/.umi-production
 /src/.umi-test
 /.env.local
+
+package-lock.json
