--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "test": "umi-test",
     "test:coverage": "umi-test --coverage"
   },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
+  "husky": {
+    "hooks": {
+      "commit-msg": "node scripts/verify-commit.js"
+    }
   },
   "lint-staged": {
     "*.{js,jsx,less,md,json}": [
@@ -31,6 +33,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/test": "^3.4.25",
+    "chalk": "^4.1.1",
+    "cross-env": "^7.0.3",
+    "husky": "^6.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "react": "17.x",
